<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player1_hint">Player 1</string>
    <string name="player2_hint">Player 2</string>
    <string name="game_dialog_title">New game</string>
    <string name="done">Done</string>
    <string name="game_dialog_empty_name">Name mustn\'t be empty</string>
    <string name="game_dialog_same_names">Names mustn\'t be the same</string>
    <string name="game_end_dialog_headline">The winner is</string>
    <string name="welcome">Welcome to mobile architecture example</string>
    <string name="button_new_game">New Game</string>
    <string name="button_load_game">Load Game</string>
    <string name="button_save_game">Save Game</string>
    <string name="button_statistics">Statistics</string>
    <string name="player_1_wins">Player 1 wins</string>
    <string name="player_2_wins">Player 2 wins</string>
    <string name="draws">Draws</string>
    <string name="game_saved">Game saved</string>
    <string name="no_game_saved">No game saved can be found</string>
</resources>
