<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameWelcomeActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:padding="10dp"
        android:layout_margin="25dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:text="@string/button_new_game" />

        <Button
            android:id="@+id/buttonLoadGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/buttonNewGame"
            android:layout_marginTop="45dp"
            android:text="@string/button_load_game" />

        <Button
            android:id="@+id/buttonStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/buttonLoadGame"
            android:layout_marginTop="45dp"
            android:text="@string/button_statistics" />
    </RelativeLayout>
</LinearLayout>
